# IGSTKApps

IGITutorial/: CMakeLists.txt  IGIConfigurationData.cxx  IGIConfigurationData.h  README.txt  license.txt
IGITutorial/IGI3DDigitizer/: CMakeLists.txt  FiducialSet.cxx  FiducialSet.h  IGI3DDigitizer.qrc  IGI3DDigitizerGUI.cxx  IGI3DDigitizerGUI.h  IGI3DDigitizerGUI.ui  README3DDigitizer.html  main.cxx
IGITutorial/IGI3DDigitizer/Images/: icon.icns
IGITutorial/IGICameraCalibration/: CMakeLists.txt  CameraCalibration.cxx  CameraCalibration.h  IGICameraCalibration.qrc  IGICameraCalibration.rc  ImageCapture.cxx  ImageCapture.h  MainWidget.cxx  MainWidget.h  MainWidget.ui  READMECameraCalibration.html  ValidateCameraCalibration.cxx  ValidateCameraCalibration.h  main.cxx
IGITutorial/IGICameraCalibration/Images/: Validation.icns
IGITutorial/IGINavigation/: ButtonSetWidget.cxx  ButtonSetWidget.h  CMakeLists.txt  ErrorManager.cxx  ErrorManager.h  FiducialSet.cxx  FiducialSet.h  IGINavigation.qrc  IGINavigationGUI.cxx  IGINavigationGUI.h  IGINavigationGUI.ui  READMENavigation.html  READMENavigation.txt  XMLSettings.h  main.cxx
IGITutorial/IGINavigation/Images/: icon.icns
IGITutorial/IGIPivotCalibration/: CMakeLists.txt  IGIPivotCalibration.qrc  IGIPivotCalibration.rc  PivotCalibration.cxx  PivotCalibration.h  PivotCalibration.ui  READMEPivotCalibration.html  READMEPivotCalibration.txt  main.cxx
IGITutorial/IGIPivotCalibration/Images/: pivot.icns
IGITutorial/IGIPlanning/: ButtonSetWidget.cxx  ButtonSetWidget.h  CMakeLists.txt  ErrorManager.cxx  ErrorManager.h  FiducialSet.cxx  FiducialSet.h  IGIPlanning.aps  IGIPlanning.qrc  IGIPlanning.rc  IGIPlanningGUI.cxx  IGIPlanningGUI.h  IGIPlanningGUI.ui  READMEPlanning.html  XMLSettings.h  ctkRangeSlider.h  main.cxx
IGITutorial/IGIPlanning/Images/: icon.icns
IGITutorial/IGIRemoteControl/: CMakeLists.txt  READMERemoteControl.html  RemoteControl.cxx  RemoteControl.h  RemoteControl.qrc  RemoteControl.rc  RemoteControl.ui  main.cxx
IGITutorial/IGITrackingData/: CMakeLists.txt  ErrorManager.cxx  FiducialSet.cxx  FiducialSet.h  IGITrackingData.qrc  IGITrackingDataGUI.cxx  IGITrackingDataGUI.h  IGITrackingDataGUI.ui  READMETrackingData.html  XMLSettings.h  main.cxx
IGITutorial/IGITrackingData/Images/: icon.icns
Utilities/: SetupForDevelopment.sh
Utilities/GitSetup/: SetupGitAliases.sh  config
